# AtBSBI

./: .gitignore
Advanced Robotics Application - Assignment/cow_pose_pipeline/: __init__.py  benchmark.py  compare.py  data.py  export.py  train.py  utils.py
Advanced Robotics Application - Assignment/report_assets/coco_pretrained/: coco8-pose.resolved.yaml  coco8_pose_val_metrics.json  coco_pretrained_pose_summary.json
Advanced Robotics Application - Assignment/report_assets/diagrams/: methodology_workflow.dot
Advanced Robotics Application - Assignment/report_assets/training/: run_summary.csv
Advanced Robotics Application - Assignment/utils/: extract_animal_dataset.py  validate_dataset.py
Advanced Robotics Application - Assignment/yolo_pose_ws/: .gitignore  README.md  main.py  pyproject.toml
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/: CMakeLists.txt  package.xml  setup.cfg.bak  setup.py.bak
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/config/: cow_pose.rviz  cow_pose_params.yaml
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/launch/: cow_pose_sim.launch.py  yolo_pose.launch.py
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/models/camera_rig/: model.config  model.sdf
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/models/cow/: model.config  model.sdf
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/models/cow/meshes/: cow_variant_1.glb
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/models/spot_micro/: model.config  model.sdf
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/msg/: CowPoseArray.msg  CowPoseKeypoints.msg
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/scripts/: cow_pose_node  obstacle_avoider_node  yolo_pose_node
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/worlds/: farm_world.sdf
Advanced Robotics Application - Assignment/yolo_pose_ws/src/yolo_pose_pkg/yolo_pose_pkg/: cow_pose_node.py  obstacle_avoider_node.py  skeleton_utils.py  yolo_pose_node.py
Advanced Robotics and CV - Assignment/: Smart_Agriculture_using_Deep_learning.ipynb
Advanced Robotics and CV - Assignment/results/: ResNet18_Finetuned_layer_info.csv  ResNet18_Finetuned_layer_summary.csv  all_models_combined_metrics.csv  comparison_summary.csv
Advanced Robotics and CV - Assignment/results/EfficientNetB2_FineTuned_results/: metrics_for_aggregation.csv  per_class_metrics.csv  predictions.npy  results.json  summary.csv
Advanced Robotics and CV - Assignment/results/EfficientNetB2_Frozen_results/: metrics_for_aggregation.csv  per_class_metrics.csv  predictions.npy  results.json  summary.csv
Advanced Robotics and CV - Assignment/results/MobileNet-V2_Finetuned_results/: metrics_for_aggregation.csv  per_class_metrics.csv  predictions.npy  results.json  summary.csv
Advanced Robotics and CV - Assignment/results/MobileNetV2_Frozen_results/: metrics_for_aggregation.csv  per_class_metrics.csv  predictions.npy  results.json  summary.csv
Advanced Robotics and CV - Assignment/results/ResNet18_Finetuned_results/: metrics_for_aggregation.csv  per_class_metrics.csv  predictions.npy  results.json  summary.csv
Advanced Robotics and CV - Assignment/results/ResNet18_Frozen_results/: metrics_for_aggregation.csv  per_class_metrics.csv  predictions.npy  results.json  summary.csv
Advanced Robotics and CV - Assignment/results/ResNet18_Scratch_results/: metrics_for_aggregation.csv  per_class_metrics.csv  predictions.npy  results.json  summary.csv
Conversational Chatbot and AI Certification/: Assignment_Certificate Course_Conversational AI and Chatbot Systems.docx  Rasa Chatbot.ipynb  actions.py  config.yml  database_logger.py  domain.yml
Conversational Chatbot and AI Certification/assets/: BSBI_Knowledge.md
Conversational Chatbot and AI Certification/data/: faqs.json  nlu.yml  rules.yml  stories.yml
Conversational Chatbot and AI Certification/ui/: chat_ui.py
Machine Learning Fundamentals - Assignment/: credit_card_fraud_detection.ipynb  credit_card_fraud_detection_backup_copy.ipynb  credit_card_fraud_detection_results.csv
Robotics Project Managment - Assignment/: AirDelivery_Project.gan
Robotics and Software Programming - Assignment/: Assignment_RSP_PyBullet.ipynb  Fun_Robot.urdf  box_object.urdf  box_table.urdf  cylinder_pillar.urdf  platform_1.urdf  platform_2.urdf  platform_3.urdf  platform_4.urdf  sphere_obstacle.urdf  two_wheel_robot.urdf  wall.urdf
Robotics and Software Programming - Assignment/working_urdfs/: platform_1.urdf  platform_2.urdf  platform_3.urdf  platform_4.urdf  two_wheel_robot.urdf
(+6 files in other folders)
